:tada: new features

--- a/index.html
+++ b/index.html
@@ -5,9 +5,61 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="shortcut icon" type="image/jpg" href="favicon.ico"/>
     <title>Pokedex</title>
 </head>
 <body>
+    <header>
+        <div class="container">
+            <div class="header">
+                <p>Trainer Card</p>
+
+                <div class="trainer">
+                    <img src="./assets/img/star.svg" alt="">
+                    <h2>Henrique Roldão</h2>
+                </div>
+            </div>
+
+            <section class="main">
+                <div class="left-section">
+                    <div class="poke-box">
+                        <div class="box">
+                            <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/472.png" alt="Gliscor">
+                        </div>
+                        <div class="box">
+                            <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/663.png" alt="TalonFlame">
+                        </div>
+                        <div class="box">
+                            <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/534.png" alt="Conkeldur">
+                        </div>
+                    </div>
+
+                    <div class="poke-box2">
+                        <div class="box">
+                            <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/491.png" alt="Darkrai">
+                        </div>
+                        <div class="box">
+                            <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/260.png" alt="Swampert">
+                        </div>
+                        <div class="box">
+                            <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/786.png" alt="Tapu-Lele">
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="perfil">
+                    <img src="./assets/img/perfil.jpg" alt="Meu">
+                    <div class="sociais">
+                        <a href=""><img src="./assets/img/instagram.svg" alt="Instagram"></a>
+                        <a href=""><img src="./assets/img/github.svg" alt="Github"></a>
+                        <a href=""><img src="./assets/img/linkkedin.svg" alt="Linkedin"></a>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </header>
+
     <h1>PokeDex</h1>
     <div id="poke_container" class="poke-container"></div>
 
