:tada: New features

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
                 <div class="perfil">
                     <img src="./assets/img/perfil.jpg" alt="Meu">
                     <div class="sociais">
-                        <a href=""><img src="./assets/img/instagram.svg" alt="Instagram"></a>
-                        <a href=""><img src="./assets/img/github.svg" alt="Github"></a>
-                        <a href=""><img src="./assets/img/linkkedin.svg" alt="Linkedin"></a>
+                        <a href="https://www.instagram.com/rique_roldao/"><img src="./assets/img/instagram.svg" alt="Instagram"></a>
+                        <a href="https://github.com/henrique-roldao"><img src="./assets/img/github.svg" alt="Github"></a>
+                        <a href="https://www.linkedin.com/in/henrique-roldao/"><img src="./assets/img/linkkedin.svg" alt="Linkedin"></a>
                     </div>
                 </div>
             </section>
