:tada: New features

--- a/index.html
+++ b/index.html
@@ -24,25 +24,25 @@
                 <div class="left-section">
                     <div class="poke-box">
                         <div class="box">
-                            <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/472.png" alt="Gliscor">
+                            <img title="Gliscor" src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/472.png" alt="Gliscor">
                         </div>
                         <div class="box">
-                            <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/663.png" alt="TalonFlame">
+                            <img title="Talon Flame" src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/663.png" alt="TalonFlame">
                         </div>
                         <div class="box">
-                            <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/534.png" alt="Conkeldur">
+                            <img title="Conkeldur" src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/534.png" alt="Conkeldur">
                         </div>
                     </div>
 
                     <div class="poke-box2">
                         <div class="box">
-                            <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/491.png" alt="Darkrai">
+                            <img title="Darkrai" src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/491.png" alt="Darkrai">
                         </div>
                         <div class="box">
-                            <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/260.png" alt="Swampert">
+                            <img title="Swampert" src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/260.png" alt="Swampert">
                         </div>
                         <div class="box">
-                            <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/786.png" alt="Tapu-Lele">
+                            <img title="Tapu-lele" src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/786.png" alt="Tapu-Lele">
                         </div>
                     </div>
                 </div>
